# personal-backend

./: .env  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  railway.json
alembic/: env.py
alembic/versions/: 989c94b00f35_create_user_and_bot_tables.py  e8bf7776f1ea_drop_email.py
app/: ai.py  crud.py  database.py  lib.py  main.py  models.py  schemas.py  types.py
