[tool.poetry]
name = "personal-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
requests = "^2.32.3"
pyjwt = "^2.8.0"
cryptography = "^43.0.0"
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"
openai = "^1.37.0"
faker = "^26.0.0"
tiktoken = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
